[package]
name = "rocket-fuel"
version = "0.1.1"
authors = ["Stefan Schick <stefan.schick@stecug.de>"]
edition = "2021"
description = "Fuel to speed up the development of rocket web apps"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_oauth2 = "0.5.0-rc.1"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuidv07", "chrono"] }
rusqlite = "0.25.0"
sea-orm = { version = "0.4.2", features = ["sqlx-postgres", "runtime-tokio-rustls" , "mock"] }

uuid = { version = "0.8.2", features = ["serde", "v4"]}
clap = "2.33.3"
log = "0.3.9"
env_logger = "0.8.3"

serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

aes = "0.6.0"
block-modes = "0.7.0"
hex = "0.4.3"

sendgrid = "0.17.1"
image-convert = { git = "https://github.com/stec-ug-haftungsbeschrankt/image-convert.git", branch = "magick15" }
# image-convert = { version = "0.10.4", default-features = false, features = ["none-background", "magick_rust_014"] }

reqwest = { version = "0.11.3", features = ["blocking", "json"] }
anyhow = "1.0"
async-trait = "0.1.51"

