[package]
name = "rocket-fuel"
version = "0.1.3"
authors = ["Stefan Schick <stefan.schick@stecug.de>"]
edition = "2021"
description = "Fuel to speed up the development of rocket web apps"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.4", features = ["tera"] }
rocket_oauth2 = "0.5.0-rc.3"

uuid = { version = "1.0", features = ["serde", "v4"] }
clap = { version = "4.1", features = ["cargo"] }
log = "0.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

aes-gcm-siv = "0.11"
hex = "0.4.3"

sendgrid = "0.19"
image = "*"

reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
async-trait = "0.1"

