[package]
name = "rocket-fuel"
version = "0.1.7"
authors = ["Stefan Schick <stefan.schick@stecug.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://stecug.de"
repository = "https://github.com/stec-ug-haftungsbeschrankt/rocket-fuel"
edition = "2024"
description = "Fuel to speed up the development of rocket web apps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket_oauth2 = "0.5.0"

uuid = { version = "1.23.4", features = ["serde", "v4"] }
clap = { version = "4.6.1", features = ["cargo"] }
log = "0.4.33"

serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.150"

aes-gcm-siv = "0.11"
hex = "0.4.3"

sendgrid = "0.27"
image = "0.25.10"

reqwest = { version = "0.13", features = ["json"] }
anyhow = "1.0.103"
async-trait = "0.1.89"

